Changed package name

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,17 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+# INTELLIJ
+
+.idea/
+*.iml
+/out/
+cmake-build-debug/
+*.iws
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
